# dbsql

./: .env  .gitignore  db.sqlite3  gunicorn.conf.py  main.py  makemigrations  migrate  pyproject.toml  run  stylus.sh
articles/: admin.py  apps.py  bot.py  forms.py  models.py  services.py  signals.py  sitemaps.py  urls.py  views.py
articles/migrations/: 0001_initial.py  0002_remove_article_is_published.py
assets/: admin.js  fonts.styl  highlight.min.js  style.css  style.css.map  style.styl
core/: settings.py  urls.py
etc/: djangosites.ru.conf  gunicorn.service  gunicorn.socket  nginx_host.conf
public/: robots.txt
templates/: 404.html  base.html  tg_message.html
templates/articles/: category.html  index.html  single.html
